--- a/src/main/resources/templates/normal/Base.html
+++ b/src/main/resources/templates/normal/Base.html
@@ -63,12 +63,12 @@
       
       <span onclick="toggleSidebar1()" class="crossBtn">&times;</span>
     
-     <a href="#" class="item"><i class="fas fa-home"></i> Home</a>
+     <a href="#" th:href="@{/user/index}" class="item"><i class="fas fa-home"></i> Home</a>
       <a href="#" class="item"><i class="fas fa-id-card-alt"></i> View Contacts</a>
-      <a href="#" class="item"><i class="fas fa-pencil-alt"></i> Add Contact</a>
+      <a href="#" th:href="@{/user/add-contact}" class="item"><i class="fas fa-pencil-alt"></i> Add Contact</a>
       <a href="#" class="item"><i class="fas fa-user-circle"></i> Your Profile</a>
       <a href="#" class="item"><i class="fas fa-cogs"></i> Settings</a>
-       <a href="#" class="item"><i class="fas fa-sign-out-alt"></i> Logout</a>
+       <a href="#" th:href="@{/logout}" class="item"><i class="fas fa-sign-out-alt"></i> Logout</a>
      
       <div class="divider"></div>
     </div>
@@ -78,8 +78,11 @@
     
        
     <div class="content">
+    
+   
       
       <i onclick="toggleSidebar1()"  class="fas fa-bars m-3"></i>
+  
       
       <div th:replace="${content}"></div>
       
